--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,10 @@ version = "0.2.0"
 [deps]
 FastLapackInterface = "29a986be-02c6-4525-aec4-84b980013641"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-julia = "1.6.5"
 FastLapackInterface = "^1"
+julia = "1.6.5"
